# RGM-AOGTracker

./: CMakeLists.txt  README.md
TB100-occ/: biker.txt  bird1.txt  bird2.txt  board.txt  box.txt  carchase.txt  cliffbar.txt  diving.txt  dragonbaby.txt  girl2.txt  human1.txt  human2.txt  human3.txt  human4-1.txt  human4-2.txt  human4-3.txt  human5.txt  human6.txt  human7.txt  jump.txt  kitesurf.txt  skating2-1.txt  skating2-2.txt
config/: tracker_config.xml  vot_config.xml  vottir_config.xml
entry/: AOGTracker4VOT.cpp  entry.cpp
matlab/PerfCompTB100/: GenPerfMat_AOGTracker_TB100.m  GenPerfMat_AOGTracker_TB100.m~  GenPerfMat_OtherTrackers_TB100.m  GenPerfPlots_TB100.m  GenPerfPlots_TB100.m~  Performance_Comp_TB100.m  Performance_Comp_TB100.m~
matlab/PerfCompTB100/util/: TB100_Subsets_Attributes.m  calcSeqErr.m  calcSeqErrRobust.m  collectGroundtruthFile.m  distinctColors.m  getSeqAndTrackerNames.m  parameters_to_projective_matrix.m  patchResults.m  seed_rand.m  tightfig.m
src/: AOGrammar.cpp  AOGrammar.hpp  AOGrid.cpp  AOGrid.hpp  command_line.cpp  command_line.hpp  common.hpp  environment.hpp  feature_pyr.cpp  feature_pyr.hpp  frame_capture.cpp  frame_capture.h  frame_reader.cpp  frame_reader.h  inference_dp.cpp  inference_dp.hpp  lbfgs.cpp  lbfgs.hpp  parameter_learner.cpp  parameter_learner.hpp  parameters.cpp  parameters.hpp  parse_tree.cpp  parse_tree.hpp  patch_work.cpp  patch_work.hpp  rectangle.cpp  rectangle.hpp  rgm_struct.cpp  rgm_struct.hpp  timer.cpp  timer.hpp  tracker.cpp  tracker.hpp  tracker_data.cpp  tracker_data.hpp  tracker_lk.cpp  tracker_lk.hpp  tracker_param.cpp  tracker_param.hpp  (+5 more)
src/util/: UtilFile.cpp  UtilFile.hpp  UtilGeneric.cpp  UtilGeneric.hpp  UtilLog.cpp  UtilLog.hpp  UtilMath.cpp  UtilMath.hpp  UtilOpencv.cpp  UtilOpencv.hpp  UtilSerialization.hpp  UtilString.cpp  UtilString.hpp
